test/test_Lexing/test9.c

int main() {
    char c1 = '\''; 
    char c2 = 'a';  
    char c3 = 'a'; // error 
    char c4 = 'a';    
    char* str = "Hello, \"world!\" \n"; 
}